JS: Invio messaggi HTML: fix overflow

--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -103,10 +103,20 @@ body
 }
 
 
+
 /* |||||||||| HOVER |||||||||| */
-.messaggioChat:hover i
+
+
+.fa-solid:hover,
+.messaggioChat:hover
 {
-  display: block;
+  cursor: pointer;
+}
+
+
+.fa-solid:hover
+{
+  color: black;
 }
 
 
